# vectornav

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/vectornav/: __init__.py  _vn200.py
src/vectornav_vn200.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
